# project-embrapii

./: .gitignore  ParaphraseEvaluator.py  README.ipynb  README.md  generated_queries.py  pyproject.toml  sample.py
analises/: EDA_BNAFAR.ipynb  EDA_BPS.ipynb  EDA_Hospitais_Leitos.ipynb
dados_datasus/: .dockerignore  Dockerfile  README.md  datalake.py  main.py  pyproject.toml  schema.md
dados_datasus/jdbc-client/: TestJdbc.java  teste2Jdbc.java
paraphrase-benchmark/: README.md  docker-compose.yml
paraphrase-benchmark/backend/: Dockerfile  requirements.txt
paraphrase-benchmark/backend/app/: __init__.py  database.py  evaluator.py  llm_client.py  main.py  models.py  schemas.py
paraphrase-benchmark/backend/app/routes/: __init__.py  evaluate.py  pipeline.py
paraphrase-benchmark/frontend/: Dockerfile  requirements.txt  rxconfig.py
paraphrase-benchmark/frontend/frontend/: __init__.py  frontend.py  state.py
paraphrase-benchmark/frontend/frontend/components/: __init__.py  evaluation_form.py  history_table.py
paraphrase-benchmark/frontend/frontend/components/pipeline/: __init__.py  evaluation_step.py  paraphrase_view.py  pipeline_wizard.py  question_curator.py  schema_input.py  sql_generator.py
