[project]
name = "project-embrapii"
version = "0.1.0"
description = ""
authors = [
    {name = "Jaide Fernando de Carvalho Zardin",email = "jaide.zardin@icomp.ufam.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "sqlparse (>=0.5.4,<0.6.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
